ocp/routes-dan-test-httpd-app.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: dan-test-httpd-app
  name: dan-test-httpd-app
spec:
  host: 192.168.99.102
  port: 
    targetPort: 8080-tcp
  to:
    kind: Service
    name: dev1-dan-test-httpd-app
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2018-08-09T18:36:39Z
      status: "True"
      type: Admitted
    host: dev1-dan-test-httpd-app
    routerName: router
    wildcardPolicy: None
