ocp/services-dan-test-httpd-app.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: dan-test-httpd-app
  name: dan-test-httpd-app
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: dan-test-httpd-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
